// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media returns the result of the function literally if the input is not an object 1`] = `
Object {
  "width": "100%",
}
`;

exports[`media returns the result of the predicate function at the correct breakpoints 1`] = `
Object {
  "@media (min-width: 0)": Object {
    "width": "100%",
  },
  "@media (min-width: 48em)": Object {
    "width": "50%",
  },
}
`;
